@@ -1,17 +1,17 @@
 package org.jabref.logic.openoffice.style;
 
-import java.io.File;
 import java.io.IOException;
 import java.net.URISyntaxException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.Set;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import org.jabref.logic.layout.Layout;
 import org.jabref.logic.layout.LayoutFormatterPreferences;
@@ -20,6 +20,11 @@ import org.jabref.model.entry.BibEntry;
 import org.jabref.model.entry.field.StandardField;
 import org.jabref.model.entry.types.StandardEntryType;
 import org.jabref.model.entry.types.UnknownEntryType;
+import org.jabref.model.openoffice.ootext.OOText;
+import org.jabref.model.openoffice.style.CitationMarkerEntry;
+import org.jabref.model.openoffice.style.CitationMarkerNumericBibEntry;
+import org.jabref.model.openoffice.style.CitationMarkerNumericEntry;
+import org.jabref.model.openoffice.style.NonUniqueCitationMarker;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -54,9 +59,9 @@ class OOBibStyleTest {
 
     @Test
     void testAuthorYearAsFile() throws URISyntaxException, IOException {
-        File defFile = Path.of(OOBibStyleTest.class.getResource(StyleLoader.DEFAULT_AUTHORYEAR_STYLE_PATH).toURI())
-                           .toFile();
-        OOBibStyle style = new OOBibStyle(defFile, layoutFormatterPreferences, StandardCharsets.UTF_8);
+        Path defFile = Path.of(OOBibStyleTest.class.getResource(StyleLoader.DEFAULT_AUTHORYEAR_STYLE_PATH).toURI());
+
+        OOBibStyle style = new OOBibStyle(defFile, layoutFormatterPreferences);
         assertTrue(style.isValid());
         assertFalse(style.isInternalStyle());
         assertFalse(style.isCitationKeyCiteMarkers());
@@ -80,39 +85,146 @@ class OOBibStyleTest {
         assertTrue(style.isSortByPosition());
     }
 
+    /*
+     * begin helpers
+     */
+    static String runGetNumCitationMarker2a(OOBibStyle style,
+                                            List<Integer> num, int minGroupingCount, boolean inList) {
+        return OOBibStyleTestHelper.runGetNumCitationMarker2a(style, num, minGroupingCount, inList);
+    }
+
+    static CitationMarkerNumericEntry numEntry(String key, int num, String pageInfoOrNull) {
+        return OOBibStyleTestHelper.numEntry(key, num, pageInfoOrNull);
+    }
+
+    static CitationMarkerNumericBibEntry numBibEntry(String key, Optional<Integer> num) {
+        return OOBibStyleTestHelper.numBibEntry(key, num);
+    }
+
+    static String runGetNumCitationMarker2b(OOBibStyle style,
+                                            int minGroupingCount,
+                                            CitationMarkerNumericEntry... s) {
+        List<CitationMarkerNumericEntry> input = Stream.of(s).collect(Collectors.toList());
+        OOText res = style.getNumCitationMarker2(input, minGroupingCount);
+        return res.toString();
+    }
+
+    static CitationMarkerEntry makeCitationMarkerEntry(BibEntry entry,
+                                                       BibDatabase database,
+                                                       String uniqueLetterQ,
+                                                       String pageInfoQ,
+                                                       boolean isFirstAppearanceOfSource) {
+        return OOBibStyleTestHelper.makeCitationMarkerEntry(entry,
+                database,
+                uniqueLetterQ,
+                pageInfoQ,
+                isFirstAppearanceOfSource);
+    }
+
+    /*
+     * Similar to old API. pageInfo is new, and unlimAuthors is
+     * replaced with isFirstAppearanceOfSource
+     */
+    static String getCitationMarker2(OOBibStyle style,
+                                     List<BibEntry> entries,
+                                     Map<BibEntry, BibDatabase> entryDBMap,
+                                     boolean inParenthesis,
+                                     String[] uniquefiers,
+                                     Boolean[] isFirstAppearanceOfSource,
+                                     String[] pageInfo) {
+        return OOBibStyleTestHelper.getCitationMarker2(style,
+                entries,
+                entryDBMap,
+                inParenthesis,
+                uniquefiers,
+                isFirstAppearanceOfSource,
+                pageInfo);
+    }
+
+    static String getCitationMarker2b(OOBibStyle style,
+                                      List<BibEntry> entries,
+                                      Map<BibEntry, BibDatabase> entryDBMap,
+                                      boolean inParenthesis,
+                                      String[] uniquefiers,
+                                      Boolean[] isFirstAppearanceOfSource,
+                                      String[] pageInfo) {
+        return OOBibStyleTestHelper.getCitationMarker2b(style,
+                entries,
+                entryDBMap,
+                inParenthesis,
+                uniquefiers,
+                isFirstAppearanceOfSource,
+                pageInfo);
+    }
+
+    /*
+     * end helpers
+     */
+
     @Test
     void testGetNumCitationMarker() throws IOException {
         OOBibStyle style = new OOBibStyle(StyleLoader.DEFAULT_NUMERICAL_STYLE_PATH,
                 layoutFormatterPreferences);
-        assertEquals("[1] ", style.getNumCitationMarker(Arrays.asList(1), -1, true));
-        assertEquals("[1]", style.getNumCitationMarker(Arrays.asList(1), -1, false));
-        assertEquals("[1] ", style.getNumCitationMarker(Arrays.asList(1), 0, true));
-        assertEquals("[1-3] ", style.getNumCitationMarker(Arrays.asList(1, 2, 3), 1, true));
-        assertEquals("[1; 2; 3] ", style.getNumCitationMarker(Arrays.asList(1, 2, 3), 5, true));
-        assertEquals("[1; 2; 3] ", style.getNumCitationMarker(Arrays.asList(1, 2, 3), -1, true));
-        assertEquals("[1; 3; 12] ", style.getNumCitationMarker(Arrays.asList(1, 12, 3), 1, true));
-        assertEquals("[3-5; 7; 10-12] ", style.getNumCitationMarker(Arrays.asList(12, 7, 3, 4, 11, 10, 5), 1, true));
+        assertEquals("[1] ", runGetNumCitationMarker2a(style, List.of(1), -1, true));
 
-        String citation = style.getNumCitationMarker(Arrays.asList(1), -1, false);
-        assertEquals("[1; pp. 55-56]", style.insertPageInfo(citation, "pp. 55-56"));
+        assertEquals("[1]", runGetNumCitationMarker2a(style, List.of(1), -1, false));
+        assertEquals("[1]", runGetNumCitationMarker2b(style, -1, numEntry("key", 1, null)));
+
+        assertEquals("[1] ", runGetNumCitationMarker2a(style, List.of(1), 0, true));
+
+        CitationMarkerNumericEntry e2 = numEntry("key", 1, "pp. 55-56");
+        assertTrue(e2.getPageInfo().isPresent());
+        assertEquals("pp. 55-56", e2.getPageInfo().get().toString());
+
+        OOBibStyleTestHelper.testGetNumCitationMarkerExtra(style);
     }
 
     @Test
     void testGetNumCitationMarkerUndefined() throws IOException {
         OOBibStyle style = new OOBibStyle(StyleLoader.DEFAULT_NUMERICAL_STYLE_PATH,
                 layoutFormatterPreferences);
-        assertEquals("[" + OOBibStyle.UNDEFINED_CITATION_MARKER + "; 2-4] ",
-                style.getNumCitationMarker(Arrays.asList(4, 2, 3, 0), 1, true));
 
-        assertEquals("[" + OOBibStyle.UNDEFINED_CITATION_MARKER + "] ",
-                style.getNumCitationMarker(Arrays.asList(0), 1, true));
+        // unresolved citations look like [??key]
+        assertEquals("[" + OOBibStyle.UNDEFINED_CITATION_MARKER + "key" + "]",
+                runGetNumCitationMarker2b(style, 1,
+                        numEntry("key", 0, null)));
 
-        assertEquals("[" + OOBibStyle.UNDEFINED_CITATION_MARKER + "; 1-3] ",
-                style.getNumCitationMarker(Arrays.asList(1, 2, 3, 0), 1, true));
+        // pageInfo is shown for unresolved citations
+        assertEquals("[" + OOBibStyle.UNDEFINED_CITATION_MARKER + "key" + "; p1]",
+                runGetNumCitationMarker2b(style, 1,
+                        numEntry("key", 0, "p1")));
 
-        assertEquals("[" + OOBibStyle.UNDEFINED_CITATION_MARKER + "; " + OOBibStyle.UNDEFINED_CITATION_MARKER + "; "
-                        + OOBibStyle.UNDEFINED_CITATION_MARKER + "] ",
-                style.getNumCitationMarker(Arrays.asList(0, 0, 0), 1, true));
+        // unresolved citations sorted to the front
+        assertEquals("[" + OOBibStyle.UNDEFINED_CITATION_MARKER + "key" + "; 2-4]",
+                runGetNumCitationMarker2b(style, 1,
+                        numEntry("x4", 4, ""),
+                        numEntry("x2", 2, ""),
+                        numEntry("x3", 3, ""),
+                        numEntry("key", 0, "")));
+
+        assertEquals("[" + OOBibStyle.UNDEFINED_CITATION_MARKER + "key" + "; 1-3]",
+                runGetNumCitationMarker2b(style, 1,
+                        numEntry("x1", 1, ""),
+                        numEntry("x2", 2, ""),
+                        numEntry("y3", 3, ""),
+                        numEntry("key", 0, "")));
+
+        // multiple unresolved citations are not collapsed
+        assertEquals("["
+                        + OOBibStyle.UNDEFINED_CITATION_MARKER + "x1" + "; "
+                        + OOBibStyle.UNDEFINED_CITATION_MARKER + "x2" + "; "
+                        + OOBibStyle.UNDEFINED_CITATION_MARKER + "x3" + "]",
+                runGetNumCitationMarker2b(style, 1,
+                        numEntry("x1", 0, ""),
+                        numEntry("x2", 0, ""),
+                        numEntry("x3", 0, "")));
+
+        /*
+         * BIBLIOGRAPHY
+         */
+        CitationMarkerNumericBibEntry x = numBibEntry("key", Optional.empty());
+        assertEquals("[" + OOBibStyle.UNDEFINED_CITATION_MARKER + "key" + "] ",
+                style.getNumCitationMarkerForBibliography(x).toString());
     }
 
     @Test
@@ -120,8 +232,14 @@ class OOBibStyleTest {
         OOBibStyle style = new OOBibStyle(StyleLoader.DEFAULT_NUMERICAL_STYLE_PATH,
                 layoutFormatterPreferences);
         assertEquals(", ", style.getStringCitProperty("AuthorSeparator"));
+
+        // old
         assertEquals(3, style.getIntCitProperty("MaxAuthors"));
         assertTrue(style.getBooleanCitProperty(OOBibStyle.MULTI_CITE_CHRONOLOGICAL));
+        // new
+        assertEquals(3, style.getMaxAuthors());
+        assertTrue(style.getMultiCiteChronological());
+
         assertEquals("Default", style.getCitationCharacterFormat());
         assertEquals("Default [number] style file.", style.getName());
         Set<String> journals = style.getJournals();
@@ -138,17 +256,33 @@ class OOBibStyleTest {
                 .withField(StandardField.PUBLISHER, "ACM")
                 .withField(StandardField.TITLE, "Extending XP practices to support security requirements engineering")
                 .withField(StandardField.PAGES, "11--18");
+        entry.setCitationKey("Bostrom2006"); // citation key is not optional now
         BibDatabase database = new BibDatabase();
         database.insertEntry(entry);
         Map<BibEntry, BibDatabase> entryDBMap = new HashMap<>();
         entryDBMap.put(entry, database);
 
+        // Check what unlimAuthors values correspond to isFirstAppearanceOfSource false/true
+        assertEquals(3, style.getMaxAuthors());
+        assertEquals(-1, style.getMaxAuthorsFirst());
+
         assertEquals("[Boström et al., 2006]",
-                style.getCitationMarker(Collections.singletonList(entry), entryDBMap, true, null, null));
+                getCitationMarker2(style,
+                        Collections.singletonList(entry), entryDBMap,
+                        true, null, null, null));
+
         assertEquals("Boström et al. [2006]",
-                style.getCitationMarker(Collections.singletonList(entry), entryDBMap, false, null, new int[]{3}));
+                getCitationMarker2(style,
+                        Collections.singletonList(entry), entryDBMap,
+                        false, null, new Boolean[] {false}, null));
+
         assertEquals("[Boström, Wäyrynen, Bodén, Beznosov & Kruchten, 2006]",
-                style.getCitationMarker(Collections.singletonList(entry), entryDBMap, true, null, new int[]{5}));
+                getCitationMarker2(style,
+                        Collections.singletonList(entry), entryDBMap,
+                        true,
+                        null,
+                        new Boolean[] {true},
+                        null));
     }
 
     @Test
@@ -225,6 +359,7 @@ class OOBibStyleTest {
         BibDatabase database = new BibDatabase();
 
         BibEntry entry = new BibEntry();
+        entry.setCitationKey("JabRef2016");
         entry.setType(StandardEntryType.Article);
         entry.setField(StandardField.AUTHOR, "{JabRef Development Team}");
         entry.setField(StandardField.TITLE, "JabRef Manual");
@@ -232,7 +367,10 @@ class OOBibStyleTest {
         database.insertEntry(entry);
         entries.add(entry);
         entryDBMap.put(entry, database);
-        assertEquals("[JabRef Development Team, 2016]", style.getCitationMarker(entries, entryDBMap, true, null, null));
+
+        assertEquals("[JabRef Development Team, 2016]",
+                getCitationMarker2(style,
+                        entries, entryDBMap, true, null, null, null));
     }
 
     @Test
@@ -249,10 +387,11 @@ class OOBibStyleTest {
         entry.setField(StandardField.AUTHOR, "Alpha von Beta");
         entry.setField(StandardField.TITLE, "JabRef Manual");
         entry.setField(StandardField.YEAR, "2016");
+        entry.setCitationKey("a1");
         database.insertEntry(entry);
         entries.add(entry);
         entryDBMap.put(entry, database);
-        assertEquals("[von Beta, 2016]", style.getCitationMarker(entries, entryDBMap, true, null, null));
+        assertEquals("[von Beta, 2016]", getCitationMarker2(style, entries, entryDBMap, true, null, null, null));
     }
 
     @Test
@@ -267,10 +406,11 @@ class OOBibStyleTest {
         BibEntry entry = new BibEntry();
         entry.setType(StandardEntryType.Article);
         entry.setField(StandardField.YEAR, "2016");
+        entry.setCitationKey("a1");
         database.insertEntry(entry);
         entries.add(entry);
         entryDBMap.put(entry, database);
-        assertEquals("[, 2016]", style.getCitationMarker(entries, entryDBMap, true, null, null));
+        assertEquals("[, 2016]", getCitationMarker2(style, entries, entryDBMap, true, null, null, null));
     }
 
     @Test
@@ -285,10 +425,11 @@ class OOBibStyleTest {
         BibEntry entry = new BibEntry();
         entry.setType(StandardEntryType.Article);
         entry.setField(StandardField.AUTHOR, "Alpha von Beta");
+        entry.setCitationKey("a1");
         database.insertEntry(entry);
         entries.add(entry);
         entryDBMap.put(entry, database);
-        assertEquals("[von Beta, ]", style.getCitationMarker(entries, entryDBMap, true, null, null));
+        assertEquals("[von Beta, ]", getCitationMarker2(style, entries, entryDBMap, true, null, null, null));
     }
 
     @Test
@@ -302,10 +443,11 @@ class OOBibStyleTest {
 
         BibEntry entry = new BibEntry();
         entry.setType(StandardEntryType.Article);
+        entry.setCitationKey("a1");
         database.insertEntry(entry);
         entries.add(entry);
         entryDBMap.put(entry, database);
-        assertEquals("[, ]", style.getCitationMarker(entries, entryDBMap, true, null, null));
+        assertEquals("[, ]", getCitationMarker2(style, entries, entryDBMap, true, null, null, null));
     }
 
     @Test
@@ -321,17 +463,20 @@ class OOBibStyleTest {
         entry1.setField(StandardField.AUTHOR, "Alpha Beta");
         entry1.setField(StandardField.TITLE, "Paper 1");
         entry1.setField(StandardField.YEAR, "2000");
+        entry1.setCitationKey("a1");
         entries.add(entry1);
         database.insertEntry(entry1);
         BibEntry entry3 = new BibEntry();
         entry3.setField(StandardField.AUTHOR, "Alpha Beta");
         entry3.setField(StandardField.TITLE, "Paper 2");
         entry3.setField(StandardField.YEAR, "2000");
+        entry3.setCitationKey("a3");
         entries.add(entry3);
         database.insertEntry(entry3);
         BibEntry entry2 = new BibEntry();
         entry2.setField(StandardField.AUTHOR, "Gamma Epsilon");
         entry2.setField(StandardField.YEAR, "2001");
+        entry2.setCitationKey("a2");
         entries.add(entry2);
         database.insertEntry(entry2);
         for (BibEntry entry : database.getEntries()) {
@@ -339,9 +484,12 @@ class OOBibStyleTest {
         }
 
         assertEquals("[Beta, 2000; Beta, 2000; Epsilon, 2001]",
-                style.getCitationMarker(entries, entryDBMap, true, null, null));
+                getCitationMarker2b(style, entries, entryDBMap, true, null, null, null));
         assertEquals("[Beta, 2000a,b; Epsilon, 2001]",
-                style.getCitationMarker(entries, entryDBMap, true, new String[]{"a", "b", ""}, new int[]{1, 1, 1}));
+                getCitationMarker2(style, entries, entryDBMap, true,
+                        new String[] {"a", "b", ""},
+                        new Boolean[] {false, false, false},
+                        null));
     }
 
     @Test
@@ -357,27 +505,33 @@ class OOBibStyleTest {
         entry1.setField(StandardField.AUTHOR, "Alpha Beta");
         entry1.setField(StandardField.TITLE, "Paper 1");
         entry1.setField(StandardField.YEAR, "2000");
+        entry1.setCitationKey("a1");
         entries.add(entry1);
         database.insertEntry(entry1);
         BibEntry entry3 = new BibEntry();
         entry3.setField(StandardField.AUTHOR, "Alpha Beta");
         entry3.setField(StandardField.TITLE, "Paper 2");
         entry3.setField(StandardField.YEAR, "2000");
+        entry3.setCitationKey("a3");
         entries.add(entry3);
         database.insertEntry(entry3);
         BibEntry entry2 = new BibEntry();
         entry2.setField(StandardField.AUTHOR, "Gamma Epsilon");
         entry2.setField(StandardField.YEAR, "2001");
         entries.add(entry2);
+        entry2.setCitationKey("a2");
         database.insertEntry(entry2);
         for (BibEntry entry : database.getEntries()) {
             entryDBMap.put(entry, database);
         }
 
         assertEquals("Beta [2000]; Beta [2000]; Epsilon [2001]",
-                style.getCitationMarker(entries, entryDBMap, false, null, null));
+                getCitationMarker2b(style, entries, entryDBMap, false, null, null, null));
         assertEquals("Beta [2000a,b]; Epsilon [2001]",
-                style.getCitationMarker(entries, entryDBMap, false, new String[]{"a", "b", ""}, new int[]{1, 1, 1}));
+                getCitationMarker2(style, entries, entryDBMap, false,
+                        new String[] {"a", "b", ""},
+                        new Boolean[] {false, false, false},
+                        null));
     }
 
     @Test
@@ -393,18 +547,21 @@ class OOBibStyleTest {
         entry1.setField(StandardField.AUTHOR, "Alpha Beta");
         entry1.setField(StandardField.TITLE, "Paper 1");
         entry1.setField(StandardField.YEAR, "2000");
+        entry1.setCitationKey("a1");
         entries.add(entry1);
         database.insertEntry(entry1);
         BibEntry entry2 = new BibEntry();
         entry2.setField(StandardField.AUTHOR, "Alpha Beta");
         entry2.setField(StandardField.TITLE, "Paper 2");
         entry2.setField(StandardField.YEAR, "2000");
+        entry2.setCitationKey("a2");
         entries.add(entry2);
         database.insertEntry(entry2);
         BibEntry entry3 = new BibEntry();
         entry3.setField(StandardField.AUTHOR, "Alpha Beta");
         entry3.setField(StandardField.TITLE, "Paper 3");
         entry3.setField(StandardField.YEAR, "2000");
+        entry3.setCitationKey("a3");
         entries.add(entry3);
         database.insertEntry(entry3);
         for (BibEntry entry : database.getEntries()) {
@@ -412,7 +569,10 @@ class OOBibStyleTest {
         }
 
         assertEquals("[Beta, 2000a,b,c]",
-                style.getCitationMarker(entries, entryDBMap, true, new String[]{"a", "b", "c"}, new int[]{1, 1, 1}));
+                getCitationMarker2(style, entries, entryDBMap, true,
+                        new String[] {"a", "b", "c"},
+                        new Boolean[] {false, false, false},
+                        null));
     }
 
     @Test
@@ -428,18 +588,21 @@ class OOBibStyleTest {
         entry1.setField(StandardField.AUTHOR, "Alpha Beta");
         entry1.setField(StandardField.TITLE, "Paper 1");
         entry1.setField(StandardField.YEAR, "2000");
+        entry1.setCitationKey("a1");
         entries.add(entry1);
         database.insertEntry(entry1);
         BibEntry entry2 = new BibEntry();
         entry2.setField(StandardField.AUTHOR, "Alpha Beta");
         entry2.setField(StandardField.TITLE, "Paper 2");
         entry2.setField(StandardField.YEAR, "2000");
+        entry2.setCitationKey("a2");
         entries.add(entry2);
         database.insertEntry(entry2);
         BibEntry entry3 = new BibEntry();
         entry3.setField(StandardField.AUTHOR, "Alpha Beta");
         entry3.setField(StandardField.TITLE, "Paper 3");
         entry3.setField(StandardField.YEAR, "2000");
+        entry3.setCitationKey("a3");
         entries.add(entry3);
         database.insertEntry(entry3);
         for (BibEntry entry : database.getEntries()) {
@@ -447,11 +610,14 @@ class OOBibStyleTest {
         }
 
         assertEquals("Beta [2000a,b,c]",
-                style.getCitationMarker(entries, entryDBMap, false, new String[]{"a", "b", "c"}, new int[]{1, 1, 1}));
+                getCitationMarker2(style, entries, entryDBMap, false,
+                        new String[] {"a", "b", "c"},
+                        new Boolean[] {false, false, false},
+                        null));
     }
 
     @Test
-    // TODO: equals only work when initialized from file, not from reader
+        // TODO: equals only work when initialized from file, not from reader
     void testEquals() throws IOException {
         OOBibStyle style1 = new OOBibStyle(StyleLoader.DEFAULT_NUMERICAL_STYLE_PATH,
                 layoutFormatterPreferences);
@@ -461,7 +627,7 @@ class OOBibStyleTest {
     }
 
     @Test
-    // TODO: equals only work when initialized from file, not from reader
+        // TODO: equals only work when initialized from file, not from reader
     void testNotEquals() throws IOException {
         OOBibStyle style1 = new OOBibStyle(StyleLoader.DEFAULT_NUMERICAL_STYLE_PATH,
                 layoutFormatterPreferences);
@@ -501,16 +667,237 @@ class OOBibStyleTest {
         entry.setField(StandardField.AUTHOR, "Alpha von Beta and Gamma Epsilon and Ypsilon Tau");
         entry.setField(StandardField.TITLE, "JabRef Manual");
         entry.setField(StandardField.YEAR, "2016");
+        entry.setCitationKey("a1");
         database.insertEntry(entry);
         entries.add(entry);
         entryDBMap.put(entry, database);
         assertEquals("von Beta, Epsilon, & Tau, 2016",
-                style.getCitationMarker(entries, entryDBMap, true, null, null));
+                getCitationMarker2(style, entries, entryDBMap, true, null, null, null));
     }
 
     @Test
     void testIsValidWithDefaultSectionAtTheStart() throws Exception {
         OOBibStyle style = new OOBibStyle("testWithDefaultAtFirstLIne.jstyle", layoutFormatterPreferences);
         assertTrue(style.isValid());
+    }
+
+    @Test
+    void testGetCitationMarkerJoinFirst() throws IOException {
+        OOBibStyle style = new OOBibStyle(StyleLoader.DEFAULT_NUMERICAL_STYLE_PATH,
+                layoutFormatterPreferences);
+
+        // Question: What should happen if some sources are
+        // marked as isFirstAppearanceOfSource?
+        // This test documents what is happening now.
+
+        // Two entries with identical normalizedMarkers and many authors.
+        BibEntry entry1 = new BibEntry()
+                .withField(StandardField.AUTHOR,
+                        "Gustav Bostr\\\"{o}m"
+                                + " and Jaana W\\\"{a}yrynen"
+                                + " and Marine Bod\\'{e}n"
+                                + " and Konstantin Beznosov"
+                                + " and Philippe Kruchten")
+                .withField(StandardField.YEAR, "2006")
+                .withField(StandardField.BOOKTITLE, "A book 1")
+                .withField(StandardField.PUBLISHER, "ACM")
+                .withField(StandardField.TITLE, "Title 1")
+                .withField(StandardField.PAGES, "11--18");
+        entry1.setCitationKey("b1");
+
+        BibEntry entry2 = new BibEntry()
+                .withField(StandardField.AUTHOR,
+                        "Gustav Bostr\\\"{o}m"
+                                + " and Jaana W\\\"{a}yrynen"
+                                + " and Marine Bod\\'{e}n"
+                                + " and Konstantin Beznosov"
+                                + " and Philippe Kruchten")
+                .withField(StandardField.YEAR, "2006")
+                .withField(StandardField.BOOKTITLE, "A book 2")
+                .withField(StandardField.PUBLISHER, "ACM")
+                .withField(StandardField.TITLE, "title2")
+                .withField(StandardField.PAGES, "11--18");
+        entry2.setCitationKey("b2");
+
+        // Last Author differs.
+        BibEntry entry3 = new BibEntry()
+                .withField(StandardField.AUTHOR,
+                        "Gustav Bostr\\\"{o}m"
+                                + " and Jaana W\\\"{a}yrynen"
+                                + " and Marine Bod\\'{e}n"
+                                + " and Konstantin Beznosov"
+                                + " and Philippe NotKruchten")
+                .withField(StandardField.YEAR, "2006")
+                .withField(StandardField.BOOKTITLE, "A book 3")
+                .withField(StandardField.PUBLISHER, "ACM")
+                .withField(StandardField.TITLE, "title3")
+                .withField(StandardField.PAGES, "11--18");
+        entry3.setCitationKey("b3");
+
+        BibDatabase database = new BibDatabase();
+        database.insertEntry(entry1);
+        database.insertEntry(entry2);
+        database.insertEntry(entry3);
+
+        // Without pageInfo, two isFirstAppearanceOfSource may be joined.
+        // The third is NotKruchten, should not be joined.
+        if (true) {
+            List<CitationMarkerEntry> citationMarkerEntries = new ArrayList<>();
+            CitationMarkerEntry cm1 =
+                    makeCitationMarkerEntry(entry1, database, "a", null, true);
+            citationMarkerEntries.add(cm1);
+            CitationMarkerEntry cm2 =
+                    makeCitationMarkerEntry(entry2, database, "b", null, true);
+            citationMarkerEntries.add(cm2);
+            CitationMarkerEntry cm3 =
+                    makeCitationMarkerEntry(entry3, database, "c", null, true);
+            citationMarkerEntries.add(cm3);
+
+            assertEquals("[Boström, Wäyrynen, Bodén, Beznosov & Kruchten, 2006a,b"
+                            + "; Boström, Wäyrynen, Bodén, Beznosov & NotKruchten, 2006c]",
+                    style.createCitationMarker(citationMarkerEntries,
+                            true,
+                            NonUniqueCitationMarker.THROWS).toString());
+
+            assertEquals("Boström, Wäyrynen, Bodén, Beznosov & Kruchten [2006a,b]"
+                            + "; Boström, Wäyrynen, Bodén, Beznosov & NotKruchten [2006c]",
+                    style.createCitationMarker(citationMarkerEntries,
+                            false,
+                            NonUniqueCitationMarker.THROWS).toString());
+        }
+
+        // Without pageInfo, only the first is isFirstAppearanceOfSource.
+        // The second may be joined, based on expanded normalizedMarkers.
+        // The third is NotKruchten, should not be joined.
+        if (true) {
+            List<CitationMarkerEntry> citationMarkerEntries = new ArrayList<>();
+            CitationMarkerEntry cm1 =
+                    makeCitationMarkerEntry(entry1, database, "a", null, true);
+            citationMarkerEntries.add(cm1);
+            CitationMarkerEntry cm2 =
+                    makeCitationMarkerEntry(entry2, database, "b", null, false);
+            citationMarkerEntries.add(cm2);
+            CitationMarkerEntry cm3 =
+                    makeCitationMarkerEntry(entry3, database, "c", null, false);
+            citationMarkerEntries.add(cm3);
+
+            assertEquals("[Boström, Wäyrynen, Bodén, Beznosov & Kruchten, 2006a,b"
+                            + "; Boström et al., 2006c]",
+                    style.createCitationMarker(citationMarkerEntries,
+                            true,
+                            NonUniqueCitationMarker.THROWS).toString());
+        }
+        // Without pageInfo, only the second is isFirstAppearanceOfSource.
+        // The second is not joined, because it is a first appearance, thus
+        // requires more names to be shown.
+        // The third is NotKruchten, should not be joined.
+        if (true) {
+            List<CitationMarkerEntry> citationMarkerEntries = new ArrayList<>();
+            CitationMarkerEntry cm1 =
+                    makeCitationMarkerEntry(entry1, database, "a", null, false);
+            citationMarkerEntries.add(cm1);
+            CitationMarkerEntry cm2 =
+                    makeCitationMarkerEntry(entry2, database, "b", null, true);
+            citationMarkerEntries.add(cm2);
+            CitationMarkerEntry cm3 =
+                    makeCitationMarkerEntry(entry3, database, "c", null, false);
+            citationMarkerEntries.add(cm3);
+
+            assertEquals("[Boström et al., 2006a"
+                            + "; Boström, Wäyrynen, Bodén, Beznosov & Kruchten, 2006b"
+                            + "; Boström et al., 2006c]",
+                    style.createCitationMarker(citationMarkerEntries,
+                            true,
+                            NonUniqueCitationMarker.THROWS).toString());
+        }
+
+        // Without pageInfo, neither is isFirstAppearanceOfSource.
+        // The second is joined.
+        // The third is NotKruchten, but is joined because NotKruchten is not among the names shown.
+        // Is this the correct behaviour?
+        if (true) {
+            List<CitationMarkerEntry> citationMarkerEntries = new ArrayList<>();
+            CitationMarkerEntry cm1 =
+                    makeCitationMarkerEntry(entry1, database, "a", null, false);
+            citationMarkerEntries.add(cm1);
+            CitationMarkerEntry cm2 =
+                    makeCitationMarkerEntry(entry2, database, "b", null, false);
+            citationMarkerEntries.add(cm2);
+            CitationMarkerEntry cm3 =
+                    makeCitationMarkerEntry(entry3, database, "c", null, false);
+            citationMarkerEntries.add(cm3);
+
+            assertEquals("[Boström et al., 2006a,b,c]",
+                    style.createCitationMarker(citationMarkerEntries,
+                            true,
+                            NonUniqueCitationMarker.THROWS).toString());
+        }
+
+        // With pageInfo: different entries with identical non-null pageInfo: not joined.
+        // XY [2000a,b,c; p1] whould be confusing.
+        if (true) {
+            List<CitationMarkerEntry> citationMarkerEntries = new ArrayList<>();
+            CitationMarkerEntry cm1 =
+                    makeCitationMarkerEntry(entry1, database, "a", "p1", false);
+            citationMarkerEntries.add(cm1);
+            CitationMarkerEntry cm2 =
+                    makeCitationMarkerEntry(entry2, database, "b", "p1", false);
+            citationMarkerEntries.add(cm2);
+            CitationMarkerEntry cm3 =
+                    makeCitationMarkerEntry(entry3, database, "c", "p1", false);
+            citationMarkerEntries.add(cm3);
+
+            assertEquals("[Boström et al., 2006a; p1"
+                            + "; Boström et al., 2006b; p1"
+                            + "; Boström et al., 2006c; p1]",
+                    style.createCitationMarker(citationMarkerEntries,
+                            true,
+                            NonUniqueCitationMarker.THROWS).toString());
+        }
+
+        // With pageInfo: same entries with identical non-null pageInfo: collapsed.
+        // Note: "same" here looks at the visible parts and citation key only,
+        //       but ignores the rest. Normally the citation key should distinguish.
+        if (true) {
+            List<CitationMarkerEntry> citationMarkerEntries = new ArrayList<>();
+            CitationMarkerEntry cm1 =
+                    makeCitationMarkerEntry(entry1, database, "a", "p1", false);
+            citationMarkerEntries.add(cm1);
+            CitationMarkerEntry cm2 =
+                    makeCitationMarkerEntry(entry1, database, "a", "p1", false);
+            citationMarkerEntries.add(cm2);
+            CitationMarkerEntry cm3 =
+                    makeCitationMarkerEntry(entry1, database, "a", "p1", false);
+            citationMarkerEntries.add(cm3);
+
+            assertEquals("[Boström et al., 2006a; p1]",
+                    style.createCitationMarker(citationMarkerEntries,
+                            true,
+                            NonUniqueCitationMarker.THROWS).toString());
+        }
+        // With pageInfo: same entries with different pageInfo: kept separate.
+        // Empty ("") and missing pageInfos considered equal, thus collapsed.
+        if (true) {
+            List<CitationMarkerEntry> citationMarkerEntries = new ArrayList<>();
+            CitationMarkerEntry cm1 =
+                    makeCitationMarkerEntry(entry1, database, "a", "p1", false);
+            citationMarkerEntries.add(cm1);
+            CitationMarkerEntry cm2 =
+                    makeCitationMarkerEntry(entry1, database, "a", "p2", false);
+            citationMarkerEntries.add(cm2);
+            CitationMarkerEntry cm3 =
+                    makeCitationMarkerEntry(entry1, database, "a", "", false);
+            citationMarkerEntries.add(cm3);
+            CitationMarkerEntry cm4 =
+                    makeCitationMarkerEntry(entry1, database, "a", null, false);
+            citationMarkerEntries.add(cm4);
+
+            assertEquals("[Boström et al., 2006a; p1"
+                            + "; Boström et al., 2006a; p2"
+                            + "; Boström et al., 2006a]",
+                    style.createCitationMarker(citationMarkerEntries,
+                            true,
+                            NonUniqueCitationMarker.THROWS).toString());
+        }
     }
 }
